# bigram_url

./: .gitignore  LICENSE  README.md  build_tld_words.py  candidates.py  pyproject.toml  rdap.py  registrar_check.py  requirements.txt  scan.py  tld_words.py
data/: word_tlds.tsv
results/: SUMMARY.md  available_domains.csv  available_domains.txt  pending_centralnic.txt
tests/: test_candidates.py  test_rdap.py  test_tld_words.py
